examples/test/testpolicy11538.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11538
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key26: value12
      key46: value47
      key12: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value35
          key23: value23
          key31: value8
      podSelector:
        matchLabels:
          key26: value4
          key21: value10
